--- a/header.html
+++ b/header.html
@@ -6,12 +6,18 @@
 					</div>
 					<div class="col-md-7">
 						<div class="row">
-							<div class="col">
+							<div class="col d-none d-md-block">
 								<div class="top-wrap d-flex">
-									<div class="icon d-flex align-items-center justify-content-center"><span class="fa fa-location-arrow"></span></div>
-									<div class="text"><span>Address</span><span>Near Akash Club Road, AIBEA A Colony, Paravai, Madurai-625 402.</span></div>
+									<div class="icon d-flex align-items-center justify-content-center">
+										<span class="fa fa-location-arrow"></span>
+									</div>
+									<div class="text">
+										<span>Address</span>
+										<span>Near Akash Club Road, AIBEA A Colony, Paravai, Madurai-625 402.</span>
+									</div>
 								</div>
 							</div>
+
 							<div class="col">
 								<div class="top-wrap d-flex">
 									<div class="icon d-flex align-items-center justify-content-center"><span class="fa fa-location-arrow"></span></div>
