--- a/services.html
+++ b/services.html
@@ -85,7 +85,7 @@
         <!-- Service Card -->
         <div class="col-lg-4 col-md-6">
           <div class="service-card">
-            <img src=""
+            <img src="images/Periodic Maintenance Service.webp" alt="Periodic Maintenance Service" style="width:100%; border-radius:8px; margin-bottom:15px;">
             <h4>Periodic Maintenance Service (PMS) in Madurai</h4>
             <p>
               Regular maintenance is the foundation of a healthy vehicle. Our Periodic Maintenance Service in Madurai is carried out as per manufacturer-recommended intervals to ensure optimal performance and safety.
@@ -114,7 +114,7 @@
 
         <div class="col-lg-4 col-md-6">
           <div class="service-card">
-            <i class="fa fa-wrench"></i>
+            <img src="images/Running Repair Services.webp" alt="Running Repair Services" style="width:100%; border-radius:8px; margin-bottom:15px;">
             <h4>Running Repair Services in Madurai</h4>
             <p>
               If your car is showing unusual behavior, reduced performance, or warning signs, our running repair services in Madurai address issues before they turn into major failures.
@@ -138,7 +138,7 @@
 
         <div class="col-lg-4 col-md-6">
           <div class="service-card">
-            <i class="fa fa-laptop"></i>
+            <img src="images/Scanning & Computerized Diagnostics.webp" alt="Scanning & Computerized Diagnostics" style="width:100%; border-radius:8px; margin-bottom:15px;">
             <h4>Scanning & Computerized Diagnostics in Madurai</h4>
             <p>
               Modern cars require modern solutions. We use advanced OBD & ECU diagnostic tools for accurate fault detection.
@@ -163,7 +163,7 @@
 
         <div class="col-lg-4 col-md-6">
           <div class="service-card">
-            <i class="fa fa-bolt"></i>
+            <img src="images/Car Electrical Work.webp" alt="Car Electrical Work" style="width:100%; border-radius:8px; margin-bottom:15px;">
             <h4>Car Electrical Work in Madurai</h4>
             <p>
               Our expert technicians provide safe and reliable car electrical services for all vehicle brands.
@@ -188,7 +188,7 @@
 
         <div class="col-lg-4 col-md-6">
           <div class="service-card">
-            <i class="fa fa-snowflake-o"></i>
+            <img src="images/Car AC Service & Repair.webp" alt="Car AC Service & Repair" style="width:100%; border-radius:8px; margin-bottom:15px;">
             <h4>Car AC Service & Repair in Madurai</h4>
             <p>
               Madurai’s climate demands a perfectly working AC system. Our car AC services in Madurai ensure maximum cooling efficiency and comfort.
@@ -213,7 +213,7 @@
 
         <div class="col-lg-4 col-md-6">
           <div class="service-card">
-            <i class="fa fa-paint-brush"></i>
+            <img src="images/Car Detailing Services.webp" alt="Car Detailing Services" style="width:100%; border-radius:8px; margin-bottom:15px;">
             <h4>Car Detailing Services in Madurai</h4>
             <p>
               Enhance your car’s appearance with our professional detailing services, designed to protect and refresh your vehicle.
@@ -238,7 +238,7 @@
 
         <div class="col-lg-4 col-md-6">
           <div class="service-card">
-            <i class="fa fa-paint-brush"></i>
+            <img src="images/Painting & Tinkering Work.webp" alt="Painting & Tinkering Work" style="width:100%; border-radius:8px; margin-bottom:15px;">
             <h4>Painting & Tinkering Work in Madurai</h4>
             <p>
               We offer high-precision car painting, denting & tinkering services using professional tools and paint systems.
