--- a/index.html
+++ b/index.html
@@ -343,6 +343,12 @@
 
 
 		<!-- Google review Section -->
+		 <section class="ftco-section">
+			<div class="container">
+			<div class="elfsight-app-a1eeffc6-e4f5-4164-8385-7e44a8cea157" data-elfsight-app-lazy>
+			</div>
+			</div>
+		 </section>
 
 		
 
@@ -505,6 +511,8 @@
   <div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px"><circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee"/><circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#F96D00"/></svg></div>
 
 
+
+	<script src="https://elfsightcdn.com/platform.js" async></script>
   <script src="js/jquery.min.js"></script>
   <script src="js/jquery-migrate-3.0.1.min.js"></script>
   <script src="js/popper.min.js"></script>
