--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 
     <link rel="stylesheet" href="css/bootstrap-datepicker.css">
     <link rel="stylesheet" href="css/jquery.timepicker.css">
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+
 
     <link rel="stylesheet" href="css/flaticon.css">
     <link rel="stylesheet" href="css/style.css">
@@ -44,7 +46,7 @@
 					</form> -->
 			<div class="collapse navbar-collapse" id="ftco-nav">
 				<ul class="navbar-nav mr-auto">
-					<li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
+					<li class="nav-item active"><a href="index.html" class="nav-link">Home</a></li>
 					<li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
 					<li class="nav-item"><a href="services.html" class="nav-link">Services</a></li>
 					<li class="nav-item"><a href="gallery.html" class="nav-link">Gallery</a></li>
@@ -141,7 +143,7 @@
 					<!-- First Service -->
 					<div class="d-block d-flex">
 						<div class="icon d-flex justify-content-center align-items-center">
-								<span class="flaticon-car-service"></span>
+								<span class="fas fa-tools"></span>
 						</div>
 						<div class="media-body pl-3">
 							<h3 class="heading">Periodic Maintenance</h3>
@@ -161,7 +163,7 @@
 					<!-- Second Service -->
 					<div class="d-block d-flex">
 					<div class="icon d-flex justify-content-center align-items-center">
-							<span class="flaticon-tyre"></span>
+							<span class="fas fa-car-crash"></span>
 					</div>
 					<div class="media-body pl-3">
 						<h3 class="heading">Running Repair</h3>
@@ -183,7 +185,7 @@
 				<div class="col-md-4 services ftco-animate">
 					<div class="d-block d-flex">
 					<div class="icon d-flex justify-content-center align-items-center">
-							<span class="flaticon-battery"></span>
+							<span class="fas fa-laptop-code"></span>
 					</div>
 					<div class="media-body pl-3">
 						<h3 class="heading">Scanning & Diagnostics</h3>
@@ -203,7 +205,7 @@
 					<!-- Fourth Service -->
 					<div class="d-block d-flex">
 					<div class="icon d-flex justify-content-center align-items-center">
-							<span class="flaticon-car-engine"></span>
+							<span class="fas fa-bolt"></span>
 					</div>
 					<div class="media-body pl-3">
 						<h3 class="heading">Electrical Work</h3>
@@ -225,7 +227,7 @@
 				<div class="col-md-4 services ftco-animate">
 					<div class="d-block d-flex">
 					<div class="icon d-flex justify-content-center align-items-center">
-							<span class="flaticon-tow-truck"></span>
+							<span class="fas fa-snowflake"></span>
 					</div>
 					<div class="media-body pl-3">
 						<h3 class="heading">AC Work</h3>
@@ -244,7 +246,7 @@
 					<!-- Sixth Service -->
 					<div class="d-block d-flex">
 					<div class="icon d-flex justify-content-center align-items-center">
-							<span class="flaticon-repair"></span>
+							<span class="fas fa-spray-can-sparkles"></span>
 					</div>
 					<div class="media-body pl-3">
 						<h3 class="heading">Detailing Work</h3>
