--- a/header.html
+++ b/header.html
@@ -2,7 +2,7 @@
 	    <div class="container">
 				<div class="row justify-content-between">
 					<div class="col-md-3 d-flex align-items-center">
-						<a class="navbar-brand" href="index.html">Zac Motors<span>.</span></a>
+						<a class="navbar-brand" href="index.html">Zac Motors</a>
 					</div>
 					<div class="col-md-7">
 						<div class="row">
