--- a/footer.html
+++ b/footer.html
@@ -5,7 +5,9 @@
           <!-- About Part -->
           <div class="col-md-6 col-lg">
             <div class="ftco-footer-widget mb-4">
-              <h2 class="logo"><a href="index.html">Zac Motors</a></h2>
+              <a class="navbar-brand" href="index.html">
+						    <img src="images/logo.webp" alt="Zac Motors" class="logo-img">
+					    </a>
               <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
               <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-4">
                 <li class="ftco-animate"><a href="#"><span class="fa fa-twitter"></span></a></li>
