--- a/header.html
+++ b/header.html
@@ -1,9 +1,10 @@
 <div class="wrap">
 	    <div class="container">
 				<div class="row justify-content-between">
-					<div class="col-md-3 d-flex align-items-center">
-						<a class="navbar-brand" href="index.html">Zac Motors</a>
-					</div>
+					<a class="navbar-brand" href="index.html">
+						<img src="images/logo.webp" alt="Zac Motors" class="logo-img">
+					</a>
+
 					<div class="col-md-7">
 						<div class="row">
 							<div class="col d-none d-md-block">
