--- a/contact.html
+++ b/contact.html
@@ -164,8 +164,20 @@
 
 						<!-- Google Map -->
 						<div class="col-md-12">
-							<div id="map" class="map"></div>
+							<div class="google-map">
+								<iframe 
+									src="https://www.google.com/maps?q=Zac+Motors+Paravai+Madurai&output=embed"
+									width="100%" 
+									height="450" 
+									style="border:0;" 
+									allowfullscreen="" 
+									loading="lazy"
+									referrerpolicy="no-referrer-when-downgrade">
+								</iframe>
+							</div>
 						</div>
+
+
 					</div>
 				</div>
 		</section>
@@ -286,7 +298,7 @@
 			</div>
 
 			<!-- Section 7 -->
-			<div class="info-section cards">
+			<div class="info-section light cards">
 				<div class="container">
 					<h3>Customer Support & Assistance</h3>
 					<p>
