--- a/contact.html
+++ b/contact.html
@@ -60,7 +60,7 @@
 	
 	
 		<!-- Hero Section -->
-			<section class="hero-wrap hero-wrap-2" style="background-image: url('images/bg_2.webp');" data-stellar-background-ratio="0.5">
+			<section class="hero-wrap hero-wrap-2" style="background-image: url('images/bg_6.webp');" data-stellar-background-ratio="0.5">
 				<div class="overlay"></div>
 				<div class="container">
 					<div class="row no-gutters slider-text align-items-end">
@@ -76,6 +76,12 @@
 		<!-- Contact Form -->
 		<section class="ftco-section bg-light">
 				<div class="container">
+					<div class="row justify-content-center pb-5 mb-3">
+			<div class="col-md-7 heading-section text-center ftco-animate">
+				<span class="subheading">CONTACT US</span>
+				<h2>Get In Touch With Us</h2>
+			</div>
+			</div>
 					<div class="row justify-content-center">
 						<div class="col-md-12">
 							<div class="wrapper">
@@ -191,6 +197,9 @@
 				<div class="container">
 					<div class="row align-items-center">
 						<div class="col-md-7">
+							<div class="heading-section  ftco-animate">
+								<span class="subheading">REACH US FOR SERVICE & SUPPORT</span>
+							</div>
 							<h2>Get in Touch with Zac Motors – Madurai</h2>
 							<p>
 								At Zac Motors, we believe great car care begins with clear communication, expert guidance, and timely service. Whether you want to book a service, enquire about repairs, request diagnostics, or discuss bodywork and detailing, our team is always ready to assist you.
@@ -209,6 +218,9 @@
 			<!-- Section 2 -->
 			<div class="info-section light">
 				<div class="container">
+					<div class="heading-section  ftco-animate">
+								<span class="subheading">QUALITY SERVICE YOU CAN TRUST</span>
+					</div>
 					<h3>Visit Our Service Center – Madurai</h3>
 					<p class="address">
 						<strong>Zac Motors – Multi Brand Car Service Center</strong><br>
@@ -249,6 +261,9 @@
 			<!-- Section 5 -->
 			<div class="info-section light">
 				<div class="container">
+					<div class="heading-section  ftco-animate">
+								<span class="subheading">EASY BOOKING, QUICK SUPPORT</span>
+					</div>
 					<h3>Service Appointment Assistance</h3>
 					<p>
 						To ensure minimal waiting time and faster service, we recommend booking appointments in advance, especially during weekends and peak seasons.
@@ -277,6 +292,9 @@
 							<img src="images/work-1.webp" class="img-fluid rounded shadow-soft" alt="">
 						</div>
 						<div class="col-md-7">
+							<div class="heading-section  ftco-animate">
+								<span class="subheading">GET ANSWERS FROM OUR EXPERTS</span>
+							</div>
 							<h3>Service Enquiries & Consultations</h3>
 							<p>
 								If you are unsure about your vehicle’s condition or need expert advice, our technicians are happy to provide initial guidance and inspection support before service confirmation.
@@ -300,6 +318,9 @@
 			<!-- Section 7 -->
 			<div class="info-section light cards">
 				<div class="container">
+					<div class="heading-section  ftco-animate">
+								<span class="subheading">ALWAYS READY TO ASSIST</span>
+					</div>
 					<h3>Customer Support & Assistance</h3>
 					<p>
 						For any of the following, feel free to reach out:
@@ -319,6 +340,9 @@
 			<!-- Section 8 -->
 			<div class="info-section light">
 				<div class="container">
+					<div class="heading-section  ftco-animate">
+								<span class="subheading">BUILT ON SAFETY AND QUALITY</span>
+					</div>
 					<h3>Safety, Quality & Service Commitment</h3>
 					<p>
 						When you contact or visit Zac Motors, you can expect:
@@ -339,6 +363,9 @@
 			<!-- Section 9 -->
 			<div class="info-section highlight">
 				<div class="container">
+					<div class="heading-section  ftco-animate">
+								<span class="subheading">RELIABLE SERVICE YOU CAN COUNT ON</span>
+					</div>
 					<h3>Why Contact Zac Motors?</h3>
 					<ul class="check-list">
 						<li>Trusted multi brand car service center in Madurai</li>
@@ -357,7 +384,8 @@
 					<p>
 						Whether it’s routine servicing, urgent repairs, diagnostics, or complete car care, Zac Motors is here to keep your vehicle running at its best.
 					</p>
-						 <strong>Call / WhatsApp:</strong> 93452 11250
+					
+						 <strong><span>Call / WhatsApp:</strong> 93452 11250</span>
  						 <strong>Instagram:</strong> @zac.motors
 					</p>
 				</div>
