--- a/blog.html
+++ b/blog.html
@@ -60,7 +60,7 @@
 
 
     <!-- Blog Section -->
-    <section class="hero-wrap hero-wrap-2" style="background-image: url('images/bg_2.webp');" data-stellar-background-ratio="0.5">
+    <section class="hero-wrap hero-wrap-2" style="background-image: url('images/bg_5.webp');" data-stellar-background-ratio="0.5">
       <div class="overlay"></div>
       <div class="container">
         <div class="row no-gutters slider-text align-items-end">
@@ -78,6 +78,12 @@
     <!-- Blog Starts -->
     <section class="ftco-section">
       <div class="container">
+        <div class="row justify-content-center pb-5 mb-3">
+			<div class="col-md-7 heading-section text-center ftco-animate">
+				<span class="subheading">News &amp; Blog</span>
+				<h2>Latest news from our blog</h2>
+			</div>
+			</div>
         <div class="row">
 
           <!-- First Blog -->
