--- a/footer.html
+++ b/footer.html
@@ -6,9 +6,9 @@
           <div class="col-md-6 col-lg">
             <div class="ftco-footer-widget mb-4">
               <a class="navbar-brand" href="index.html">
-						    <img src="images/logo.webp" alt="Zac Motors" class="logo-img">
+						    <img src="images/footer_logo.webp" alt="Zac Motors" class="logo-img">
 					    </a>
-              <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+              <p>Multi Brand Car Service Center in Madurai. Trusted Car Service, Repair & Maintenance for All Brands</p>
               <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-4">
                 <li class="ftco-animate"><a href="#"><span class="fa fa-twitter"></span></a></li>
                 <li class="ftco-animate"><a href="#"><span class="fa fa-facebook"></span></a></li>
