--- a/services.html
+++ b/services.html
@@ -54,7 +54,7 @@
    	<!-- END nav -->
 
     
-    <section class="hero-wrap hero-wrap-2" style="background-image: url('images/bg_2.webp');" data-stellar-background-ratio="0.5">
+    <section class="hero-wrap hero-wrap-2" style="background-image: url('images/bg_3.webp');" data-stellar-background-ratio="0.5">
       <div class="overlay"></div>
       <div class="container">
         <div class="row no-gutters slider-text align-items-end">
@@ -130,9 +130,9 @@
             <h5>Why Our Running Repairs Stand Out:</h5>
             <ul>
               <li>Root-cause analysis</li>
-              <li>Long-term repair approach</li>
               <li>No unnecessary part replacement</li>
             </ul>
+            <span class="tag">Long-term repair approach</span>
           </div>
         </div>
 
@@ -273,7 +273,10 @@
       <div class="container">
         <div class="row align-items-center">
           <div class="col-md-6">
-            <h2>Why Zac Motors Is a Preferred Car Service Center in Madurai</h2>
+            <div class="section-title">
+              <span>Recommended Services</span>
+              <h2>Why Zac Motors Is a Preferred Car Service Center in Madurai</h2>
+            </div>
             <ul class="why-list">
               <li><i class="fa fa-check-circle"></i> Complete Multi Brand Service Expertise</li>
               <li><i class="fa fa-check-circle"></i> Skilled & Experienced Mechanics</li>
