add the gallery images

--- a/index.html
+++ b/index.html
@@ -428,8 +428,8 @@
 			<div class="container-fluid px-md-0">
 				<div class="row no-gutters">
           <div class="col-md-3 ftco-animate">
-            <div class="work img d-flex align-items-end" style="background-image: url(images/work-1.webp);">
-            	<a href="images/work-1.webp" class="icon image-popup d-flex justify-content-center align-items-center">
+            <div class="work img d-flex align-items-end" style="background-image: url(images/zac_work1.PNG);">
+            	<a href="images/zac_work1.PNG" class="icon image-popup d-flex justify-content-center align-items-center">
 	    					<span class="fa fa-expand"></span>
 	    				</a>
             	<div class="desc w-100 px-4">
@@ -441,8 +441,8 @@
             </div>
           </div>
           <div class="col-md-3 ftco-animate">
-            <div class="work img d-flex align-items-end" style="background-image: url(images/work-2.webp);">
-            	<a href="images/work-2.webp" class="icon image-popup d-flex justify-content-center align-items-center">
+            <div class="work img d-flex align-items-end" style="background-image: url(images/zac_work2.PNG);">
+            	<a href="images/zac_work2.PNG" class="icon image-popup d-flex justify-content-center align-items-center">
 	    					<span class="fa fa-expand"></span>
 	    				</a>
             	<div class="desc w-100 px-4">
@@ -454,8 +454,8 @@
             </div>
           </div>
           <div class="col-md-3 ftco-animate">
-            <div class="work img d-flex align-items-end" style="background-image: url(images/work-3.webp);">
-            	<a href="images/work-3.webp" class="icon image-popup d-flex justify-content-center align-items-center">
+            <div class="work img d-flex align-items-end" style="background-image: url(images/zac_work3.PNG);">
+            	<a href="images/zac_work3.PNG" class="icon image-popup d-flex justify-content-center align-items-center">
 	    					<span class="fa fa-expand"></span>
 	    				</a>
             	<div class="desc w-100 px-4">
@@ -468,8 +468,8 @@
           </div>
 
           <div class="col-md-3 ftco-animate">
-            <div class="work img d-flex align-items-end" style="background-image: url(images/work-4.webp);">
-            	<a href="images/work-4.webp" class="icon image-popup d-flex justify-content-center align-items-center">
+            <div class="work img d-flex align-items-end" style="background-image: url(images/zac_work4.PNG);">
+            	<a href="images/zac_work4.PNG" class="icon image-popup d-flex justify-content-center align-items-center">
 	    					<span class="fa fa-expand"></span>
 	    				</a>
             	<div class="desc w-100 px-4">
