add the gallery images

--- a/gallery.html
+++ b/gallery.html
@@ -78,8 +78,8 @@
 			<div class="container">
 				<div class="row">
           <div class="col-md-4 ftco-animate">
-            <div class="work mb-4 img d-flex align-items-end" style="background-image: url(images/work-1.webp);">
-            	<a href="images/work-1.webp" class="icon image-popup d-flex justify-content-center align-items-center">
+            <div class="work mb-4 img d-flex align-items-end" style="background-image: url(images/zac_work1.PNG);">
+            	<a href="images/zac_work1.PNG" class="icon image-popup d-flex justify-content-center align-items-center">
 	    					<span class="fa fa-expand"></span>
 	    				</a>
             	<div class="desc w-100 px-4">
@@ -91,8 +91,8 @@
             </div>
           </div>
           <div class="col-md-4 ftco-animate">
-            <div class="work mb-4 img d-flex align-items-end" style="background-image: url(images/work-2.webp);">
-            	<a href="images/work-2.webp" class="icon image-popup d-flex justify-content-center align-items-center">
+            <div class="work mb-4 img d-flex align-items-end" style="background-image: url(images/zac_work2.PNG);">
+            	<a href="images/zac_work2.PNG" class="icon image-popup d-flex justify-content-center align-items-center">
 	    					<span class="fa fa-expand"></span>
 	    				</a>
             	<div class="desc w-100 px-4">
@@ -104,8 +104,8 @@
             </div>
           </div>
           <div class="col-md-4 ftco-animate">
-            <div class="work mb-4 img d-flex align-items-end" style="background-image: url(images/work-3.webp);">
-            	<a href="images/work-3.webp" class="icon image-popup d-flex justify-content-center align-items-center">
+            <div class="work mb-4 img d-flex align-items-end" style="background-image: url(images/zac_work3.PNG);">
+            	<a href="images/zac_work3.PNG" class="icon image-popup d-flex justify-content-center align-items-center">
 	    					<span class="fa fa-expand"></span>
 	    				</a>
             	<div class="desc w-100 px-4">
@@ -118,8 +118,8 @@
           </div>
 
           <div class="col-md-4 ftco-animate">
-            <div class="work mb-4 img d-flex align-items-end" style="background-image: url(images/work-4.webp);">
-            	<a href="images/work-4.webp" class="icon image-popup d-flex justify-content-center align-items-center">
+            <div class="work mb-4 img d-flex align-items-end" style="background-image: url(images/zac_work4.PNG);">
+            	<a href="images/zac_work4.PNG" class="icon image-popup d-flex justify-content-center align-items-center">
 	    					<span class="fa fa-expand"></span>
 	    				</a>
             	<div class="desc w-100 px-4">
@@ -131,8 +131,8 @@
             </div>
           </div>
           <div class="col-md-4 ftco-animate">
-            <div class="work mb-4 img d-flex align-items-end" style="background-image: url(images/work-1.webp);">
-            	<a href="images/work-1.webp" class="icon image-popup d-flex justify-content-center align-items-center">
+            <div class="work mb-4 img d-flex align-items-end" style="background-image: url(images/zac_work5.PNG);">
+            	<a href="images/zac_work5.PNG" class="icon image-popup d-flex justify-content-center align-items-center">
 	    					<span class="fa fa-expand"></span>
 	    				</a>
             	<div class="desc w-100 px-4">
@@ -144,8 +144,8 @@
             </div>
           </div>
           <div class="col-md-4 ftco-animate">
-            <div class="work mb-4 img d-flex align-items-end" style="background-image: url(images/work-2.webp);">
-            	<a href="images/work-2.webp" class="icon image-popup d-flex justify-content-center align-items-center">
+            <div class="work mb-4 img d-flex align-items-end" style="background-image: url(images/zac_work6.jpeg);">
+            	<a href="images/zac_work6.jpeg" class="icon image-popup d-flex justify-content-center align-items-center">
 	    					<span class="fa fa-expand"></span>
 	    				</a>
             	<div class="desc w-100 px-4">
